bugfix: lazyline painter  was changing pageheight after pageload, causing parallax scroll image to be in wrong position, revealing black background.

--- a/src/stylesheets/partials/_threecolsection.scss
+++ b/src/stylesheets/partials/_threecolsection.scss
@@ -3,7 +3,9 @@
         color: $white;
         text-decoration: none;
     }
-
+    .animicon {
+        height: 170px;
+    }
     width: 100%;
     &--subtitle {
         font-family: 'TheSansOsF';
